--- a/src/sass/sections/__imagine.scss
+++ b/src/sass/sections/__imagine.scss
@@ -4,7 +4,132 @@
     padding-bottom: 139px;
     background-image: url(../images/imagine-images/desktop/dackground-desktop1x.webp), url(../images/imagine-images/desktop/tree-desktop1x.webp);
     background-repeat: no-repeat;
-    background-size: cover, contain;
+    background-size: 1864, 461, 466px;
+    
 
+     &__title {
+        color: #FFF;
+        font-family: $montserrat-alternas;
+        font-size: 52px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+     }
 
+     &__description {
+        color: #FFF;
+        font-family: $montserrat;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 35px; /* 175% */
+     }
+
+     &__description2 {
+      color: #FFF;
+      font-family: $montserrat;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 35px; /* 175% */
+     }
+
+     &__spann {
+      color: #FFF;
+      font-family: Montserrat;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 900;
+      line-height: 55px;
+     }
+
+     &__text {
+      width: 570px;
+      margin-left: auto;
+     }
+
+     &__euro {
+      padding-top: 58px;
+      padding-left: 182px;
+      padding-right: 183px;
+     
+     }
+
+     &__box {
+      background-color: white;
+      border-radius: 26px;
+      width: 570px;
+      height: 329px;
+      margin-left: auto;
+      margin-top: 45px;
+     }
+
+     &__description-euro {
+      color: #221112;
+      text-align: center;
+      font-family: Montserrat;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 28px; /* 175% */
+     }
+
+     &__boc-description {
+      width: 341px;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 19px;
+     }
+
+     &__button {
+      background-color: #ED1C24;
+      border-radius: 70px;
+      color: #FFF;
+      text-align: center;
+      font-family: Montserrat;
+      font-size: 22px;
+      font-style: normal;
+      font-weight: 900;
+      line-height: 36px; /* 163.636% */
+      padding-top: 22px;
+      padding-bottom: 22px;
+      padding-left: 61px;
+      padding-right: 62px;
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+      margin-top: 26px;
+     }
+
+     &__box-png {
+      height: 420px;
+      padding-right: 100px;
+      padding-top: 180px;
+      
+     }
+
+     &__container {
+      display: flex;
+     }
+
+     &__ball1 {
+      width: 199px;
+      height: 180px;
+      position: absolute;
+      padding-top: 480px;
+     }
+
+     &__ball2 {
+      width: 126px;
+      height: 112px;
+      position: absolute;
+      padding-top: 420px;
+     }
+
+     &__images1 {
+      position: relative;
+      margin-right: 100px;
+     }
+
+  
 }
