--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,22 @@
-<section></section>
+<section class="footer">
+    <div class="container">
+        <div class="footer-box">
+            <div class="footer-box-1">
+                <h2 class="footer-title">STUDY.UA.</h2>
+                <p class="footer-text">Київ, вул. Драгомирова, 16
+                    метро «Дружби Народів»
+                </p>
+            </div>
+            <div class="footer-box-2">
+                <h3 class="footer-title-2">+38 044 500-03-20</h3>
+                <h3 class="footer-title-2">+38 093 000-03-20</h3>
+                <h3 class="footer-title-2">+38 097 000-03-20</h3>
+            </div>
+        </div>
+        <div class="footer-box-3">
+        </div>
+        <div class="footer-box-4">
+            <p class="footer-text-2">Всі права захищені. 1999—2021(c)</p>
+        </div>
+    </div>
+</section>
