--- a/src/sass/base/__common.scss
+++ b/src/sass/base/__common.scss
@@ -1,6 +1,7 @@
 .container {
   width: 100%;
-margin: 0 auto;
-padding-left: 375px;
-padding-right: 375px;  
-} 
+  max-width: 1920px;
+  margin: 0 auto;
+  padding-left: 375px;
+  padding-right: 375px;
+}
