--- a/src/partials/certify.html
+++ b/src/partials/certify.html
@@ -4,7 +4,10 @@
       <picture class="certify-pic">
         <source
           media="(max-width:1199px)"
-          srcset="./images/certify-images/сертіфікат2mobile1x.webp 1x, ./images/certify-images/сертіфікат2mobile2x.webp 2x"
+          srcset="
+            ./images/certify-images/сертіфікат2mobile1x.webp 1x,
+            ./images/certify-images/сертіфікат2mobile2x.webp 2x
+          "
         />
         <source
           media="(min-width:1200px)"
@@ -20,7 +23,6 @@
         />
       </picture>
       <div class="certify-boxx">
-       
         <h2 class="certify-tittle">
           Сертифікат на групову поїздку за кордон для вашої дитини
         </h2>
@@ -29,31 +31,43 @@
           залишить враження на все життя!
         </p>
       </div>
-     
     </div>
-    <ul class="certify-list">
-      <li class="certify-item">
-        <label class="certify-label">
-          <input placeholder="Ваше ім'я" class="certify-form" type="text" />
-        </label>
-      </li>
-      <li class="certify-item">
-        <label class="certify-label">
-          <input
-            placeholder="Номер телефону"
-            class="certify-form"
-            type="text"
-          />
-        </label>
-      </li>
-      <li class="certify-item">
-        <label class="certify-label">
-          <input placeholder="E-Mail" class="certify-form" type="text" />
-        </label>
-      </li>
-      <li class="certify-item">
-        <button class="certify-btn" type="button">Хочу сертифікат</button>
-      </li>
-    </ul>
+    <form >
+      <ul class="certify-list">
+        <li class="certify-item">
+          <label class="certify-label">
+            <input
+              required
+              placeholder="Ваше ім'я"
+              class="certify-form"
+              type="text"
+            />
+          </label>
+        </li>
+        <li class="certify-item">
+          <label class="certify-label">
+            <input
+              required
+              placeholder="Номер телефону"
+              class="certify-form"
+              type="text"
+            />
+          </label>
+        </li>
+        <li class="certify-item">
+          <label class="certify-label">
+            <input
+              required
+              placeholder="E-Mail"
+              class="certify-form"
+              type="text"
+            />
+          </label>
+        </li>
+        <li class="certify-item">
+          <button class="certify-btn" type="submit">Хочу сертифікат</button>
+        </li>
+      </ul>
+    </form>
   </div>
 </section>
