--- a/src/partials/impression.html
+++ b/src/partials/impression.html
@@ -12,7 +12,7 @@
       в очікуванні дива, та знаходить там подорож, що запам'ятається на все
       життя. Вам потрібно тільки обрати напрямок поїздки.
     </p>
-    <ul>
+    <ul class="impression__holder">
     <li class="impression__travel-top">
       <h2 class="impression__subtitle">Велика Британія</h2>
       <img
@@ -115,7 +115,7 @@
       />
       <ul class="impression__travelsholser">
         <li class="impression__subtext">
-          <p class="impression__travels">Ніццаㅤ<span class="impression__span">(Франція)</span></p>
+          <p class="impression__travels">Ніцца<span class="impression__span">(Франція)</span></p>
         </li>
         <li class="impression__subtext">
           <p class="impression__travels">Мюнхен <span class="impression__span"> (Німеччина)</span></p>
