--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,9 +3,11 @@
         <div class="footer-box">
             <div class="footer-box-1">
                 <h2 class="footer-title">STUDY.UA.</h2>
-                <p class="footer-text">Київ, вул. Драгомирова, 16
+                <div class="footer-text-box">
+                    <p class="footer-text">Київ, вул. Драгомирова, 16
                     метро «Дружби Народів»
                 </p>
+                </div>
             </div>
             <div class="footer-box-2">
                 <h3 class="footer-title-2">+38 044 500-03-20</h3>
