--- a/src/partials/work.html
+++ b/src/partials/work.html
@@ -7,14 +7,14 @@
     <div class="work-description">
       <ul class="work-list">
         <li class="work-item place1">
-          <img src="../images/work-images/icon-bord.png" alt="" class="work-img">
+          <img src="./images/work-images/icon-bord.png" alt="" class="work-img">
           <div class="work-overlay">
             <h2 class="work-heading">Крок 1</h2>
             <p class="work-desc">Залишіть заявку на цій сторінці.</p>
           </div>
         </li>
         <li class="work-item place2">
-          <img src="../images/work-images/icon-bord.png" alt="" class="work-img">
+          <img src="./images/work-images/icon-bord1.png" alt="" class="work-img">
           <div class="work-overlay">
             <h2 class="work-heading">Крок 2</h2>
             <p class="work-desc">
@@ -28,7 +28,7 @@
           </div>
         </li>
         <li class="work-item place3">
-          <img src="../images/work-images/icon-bord.png" alt="" class="work-img">
+          <img src="./images/work-images/icon-bord2.png" alt="" class="work-img">
           <div class="work-overlay">
             <h2 class="work-heading">Крок 3</h2>
             <p class="work-desc">
@@ -38,7 +38,7 @@
           </div>
         </li>
         <li class="work-item place4">
-          <img src="../images/work-images/icon-bord.png" alt="" class="work-img">
+          <img src="./images/work-images/icon-bord3.png" alt="" class="work-img">
           <div class="work-overlay">
             <h2 class="work-heading">Крок 4</h2>
             <p class="work-desc">
