--- a/src/sass/sections/__work.scss
+++ b/src/sass/sections/__work.scss
@@ -78,6 +78,11 @@
 width: 115px;
 height: 115px;
 flex-shrink: 0;
+ padding-left: 70px;
+}
+
+.work-overlay {
+  padding-left: 59px;
 }
 
 .work-list {
