--- a/src/sass/sections/__imagine.scss
+++ b/src/sass/sections/__imagine.scss
@@ -2,7 +2,7 @@
    background: #ED1C24;
    padding-top: 140px;
    padding-bottom: 139px;
-   background-image: url(../../images/imagine-images/mobile/dackground-mobile1x.webp), url(../../images/imagine-images/mobile/tree-mobile1x.webp );
+   background-image: url(../images/imagine-images/mobile/dackground-mobile1x.webp), url(../images/imagine-images/mobile/tree-mobile1x.webp);
    background-repeat: no-repeat;
    background-size: 1864, 461, 466px;
 
