modern-normlize and fix

--- a/src/partials/imagine.html
+++ b/src/partials/imagine.html
@@ -2,17 +2,18 @@
     <div class="container imagine__container">
         <div class="imagine__images1">
             <picture>
-                <source media="max-width: 1199px" srcset="./images/imagine-images/desktop/ball1-desktop1x.webp 1x, ./images/imagine-images/desktop/ball1-desktop2x.webp 2x">
-                <source media="min-width: 1200px" srcset="./images/imagine-images/mobile/ball1-desktop1x.webp 1x, ./images/imagine-images/mobile/ball1-desktop2x.webp 2x">
+                <source media="max-width: 1199px" srcset="../images/imagine-images/desktop/ball1-desktop1x.webp 1x, ../images/imagine-images/desktop/ball1-desktop2x.webp 2x">
+                <source media="min-width: 1200px" srcset="../images/imagine-images/mobile/ball1-desktop1x.webp 1x, ../images/imagine-images/mobile/ball1-desktop2x.webp 2x">
          <img src="../images/imagine-images/desktop/ball2-desktop1x.webp" class="imagine__ball1" alt="ball1">
         </picture>
         <picture>
-            <source media="max-width: 1199px" srcset="./images/imagine-images/desktop/ball2-desktop1x.webp 1x, ./images/imagine-images/desktop/ball2-desktop2x.webp 2x">
-            <source media="min-width: 1200px" srcset="./images/imagine-images/mobile/ball2-desktop1x.webp 1x, ./images/imagine-images/mobile/ball2-desktop2x.webp 2x">
+            <source media="max-width: 1199px" srcset="../images/imagine-images/desktop/ball2-desktop1x.webp 1x, ../images/imagine-images/desktop/ball2-desktop2x.webp 2x">
+            <source media="min-width: 1200px" srcset="../images/imagine-images/mobile/ball2-desktop1x.webp 1x, ../images/imagine-images/mobile/ball2-desktop2x.webp 2x">
             <img src="../images/imagine-images/desktop/ball1-desktop1x.webp" class="imagine__ball2" alt="ball2">
         </picture>
          <picture>
-            <source media="max-width: 1199px" srcset="./images/imagine-images/desktop/box-desktop1x.webp 1x, ./images/imagine-images/desktop/box-desktop2x.webp 2x">
+            <source media="max-width: 1199px" srcset="../images/imagine-images/desktop/box-desktop1x.webp 1x, ../images/imagine-images/desktop/box-desktop2x.webp 2x">
+            <source media="min-width: 1200px" srcset="../images/imagine-images/mobile/box-mobile1x.webp 1x, ../images/imagine-images/mobile/box-mobile2x.webp 2x">
             <img class="imagine__box-png" src="../images/imagine-images/desktop/box-desktop1x.webp" alt="box">
         </picture>
          
