--- a/src/partials/imagine.html
+++ b/src/partials/imagine.html
@@ -3,9 +3,9 @@
         <div class="imagine__images1">
             <picture class="imagine__ball1">
                 <source media="max-width: 1199px"
-                    srcset="../images/imagine-images/desktop/ball1-desktop1x.webp 1x, ../images/imagine-images/desktop/ball1-desktop2x.webp 2x">
+                    srcset="./images/imagine-images/desktop/ball1-desktop1x.webp 1x, ./images/imagine-images/desktop/ball1-desktop2x.webp 2x">
                 <source media="min-width: 1200px"
-                    srcset="../images/imagine-images/mobile/ball1-desktop1x.webp 1x, ../images/imagine-images/mobile/ball1-desktop2x.webp 2x">
+                    srcset="./images/imagine-images/mobile/ball1-desktop1x.webp 1x, ./images/imagine-images/mobile/ball1-desktop2x.webp 2x">
                 <img src="../images/imagine-images/desktop/ball2-desktop1x.webp" alt="ball1">
             </picture>
             <picture class="imagine__ball2">
