--- a/src/sass/sections/__work.scss
+++ b/src/sass/sections/__work.scss
@@ -1,116 +1,135 @@
-.work-title {
-  color: #221112;
-  text-align: center;
-  font-family: "Montserrat Alternates";
-  font-size: 52px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-}
-
 .work {
   padding-top: 128px;
   padding-bottom: 150px;
-}
 
-.work-text {
-  color: #221112;
-  text-align: center;
-  font-family: Montserrat;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 35px; /* 175% */
-}
+  .work-title {
+    color: #221112;
+    text-align: center;
+    font-family: "Montserrat Alternates";
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 
-.work-heading {
-  color: #221112;
-  font-family: Montserrat;
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 35px; /* 116.667% */
-}
+    @media screen and (min-width: 1200px) {
+      font-size: 52px;
+    }
+  }
 
-.work-desc {
-  color: #221112;
-  font-family: Montserrat;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 35px; /* 175% */
-  opacity: 0.8;
-}
+  .work-text {
+    color: #221112;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px; /* 162.5% */
+    padding-bottom: 50px;
 
-.work-btn {
-  display: block;
-  height: 80px;
-  width: 370px;
-  gap: 8px;
-  border-radius: 70px;
-  background: #ed1c24;
-  margin-right: auto;
-  margin-left: auto;
-}
+    @media screen and (min-width: 1200px) {
+      font-size: 20px;
+      line-height: 35px; /* 175% */
+    }
+  }
 
-.work-button {
-  color: #fff;
-  text-align: center;
-  font-family: Montserrat;
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 900;
-  line-height: 36px; /* 163.636% */
-}
+  .work-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 
-.work {
-  background-image: url(https://www.google.com/imgres?q=foyo&imgurl=https%3A%2F%2Fstatic-cse.canva.com%2Fblob%2F847132%2Fpaulskorupskas7KLaxLbSXAunsplash2.jpg&imgrefurl=https%3A%2F%2Fwww.canva.com%2Fru_ru%2Fobuchenie%2Fidei-dlya-foto%2F&docid=qv3bYgAKOmFK9M&tbnid=Pc9kPvNQkyg4iM&vet=12ahUKEwjKyr2FxMeIAxX-SPEDHR3VCnwQM3oECBwQAA..i&w=1920&h=1280&hcb=2&ved=2ahUKEwjKyr2FxMeIAxX-SPEDHR3VCnwQM3oECBwQAA);
-}
+  .work-item {
+    border-radius: 4px;
+    border: dashed #eed7d8;
+    margin-bottom: 30px;
+    display: flex;
+  }
 
-.work-item {
-  border-radius: 4px;
-  border: dashed #eed7d8;
-  margin-bottom: 30px;
-  display: flex;
-}
+  .place1 {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 
-.work-img {  
-width: 115px;
-height: 115px;
-flex-shrink: 0;
- padding-left: 70px;
-}
+  .work-img {
+    width: 115px;
+    height: 115px;
+    flex-shrink: 0;
+    padding-left: 70px;
+  }
 
-.work-overlay {
-  padding-left: 59px;
-}
+  .work-overlay {
+    padding-left: 59px;
+  }
 
-.work-list {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+  .work-heading {
+    color: #221112;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 35px; /* 175% */
 
-.work-text {
-  padding-bottom: 50px;
-}
+    @media screen and (min-width: 1200px) {
+      font-size: 30px;
+      line-height: 35px; /* 116.667% */
+    }
+  }
 
-.place1 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
+  .work-desc {
+    color: #221112;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px; /* 162.5% */
+    opacity: 0.8;
 
-.place2 {
-  padding-top: 60px;
-  padding-bottom: 62px;
-}
-.place3 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-.place4 {
-  padding-top: 60px;
-  padding-bottom: 62px;
+    @media screen and (min-width: 1200px) {
+      font-size: 20px;
+      line-height: 35px; /* 175% */
+    }
+  }
+
+  .place2 {
+    padding-top: 60px;
+    padding-bottom: 62px;
+  }
+
+  .place3 {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .place4 {
+    padding-top: 60px;
+    padding-bottom: 62px;
+  }
+
+  .work-btn {
+    display: block;
+    height: 80px;
+    width: 370px;
+    gap: 8px;
+    border-radius: 70px;
+    background: #ed1c24;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .work-button {
+    color: #fff;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 36px; /* 225% */
+    
+
+    @media screen and (min-width: 1200px) {
+       font-size: 22px;
+       line-height: 36px; /* 163.636% */
+      }
+  }
 }
 
 // .work-button-box {
