--- a/src/sass/sections/__work.scss
+++ b/src/sass/sections/__work.scss
@@ -24,7 +24,6 @@
     font-style: normal;
     font-weight: 400;
     line-height: 26px; /* 162.5% */
-    padding-bottom: 50px;
 
     @media screen and (min-width: 1200px) {
       font-size: 20px;
@@ -42,7 +41,12 @@
     border-radius: 4px;
     border: dashed #eed7d8;
     margin-bottom: 30px;
-    display: flex;
+    padding-left: 25px;
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      padding-left: 70px;
+    }
   }
 
   .place1 {
@@ -54,11 +58,11 @@
     width: 115px;
     height: 115px;
     flex-shrink: 0;
-    padding-left: 70px;
   }
 
   .work-overlay {
-    padding-left: 59px;
+    margin-bottom: 3px;
+    margin-top: 25px;
   }
 
   .work-heading {
@@ -93,6 +97,10 @@
   .place2 {
     padding-top: 60px;
     padding-bottom: 62px;
+
+    @media screen and (min-width: 1200px) {
+      
+    }
   }
 
   .place3 {
@@ -123,12 +131,11 @@
     font-style: normal;
     font-weight: 900;
     line-height: 36px; /* 225% */
-    
 
     @media screen and (min-width: 1200px) {
-       font-size: 22px;
-       line-height: 36px; /* 163.636% */
-      }
+      font-size: 22px;
+      line-height: 36px; /* 163.636% */
+    }
   }
 }
 
